Fix index cards

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -32,15 +32,15 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
     First we will focus on JSON, but we won't stop there!
 	</Card>
   <Card title="Community-driven" icon="pencil">
-    We want to provide a great value to the community.
-    Thus, we want to listen what you want to make a great Open Source product for your needs!
+    We would like to provide a great value to the community and develop a great Open Source product for your needs.
+    We want to listen what you want, so do not hesitate to give us feedback!
 	</Card>
   <Card title="Well-documented" icon="open-book">
-    As we aim to create a project that is used by the community.
+    We aim to create a project that is used by the community.
     For that, we will focus equally on the quality of our documentation and reference.
 	</Card>
-	<Card title="Open Source" icon="approve-check">
+	<Card title="Open Source" icon="rocket">
     We will keep this project Open Source.
-    Files, scripts, documentation: you name it and it will be accessible for the community.
+    Files, scripts, documentation: you name it and it will be accessible for the community!
 	</Card>
 </CardGrid>
